Fixed whitespace on right of footer

--- a/output/styles/styles.css
+++ b/output/styles/styles.css
@@ -60,7 +60,7 @@ header {
     }
 }  
 
-.footer {
+footer {
     padding: 8px 8px;
     background-color: #275d38;
     margin-top: 10px;
